@@ -1,6 +1,11 @@
 .TH "History For AdvanceCOMP" 1
 .SH NAME
 advcomp \(hy History For AdvanceCOMP
+.SH ADVANCECOMP VERSION 1.15 2005/04 
+.PD 0
+.IP \(bu
+Fixed the date displayed with the \(hyl advzip command.
+.PD
 .SH ADVANCECOMP VERSION 1.14 2005/02 
 .PD 0
 .IP \(bu
