@@ -5,6 +5,14 @@
 <body>
 <center><h2>History For AdvanceCOMP</h2></center>
 <h2> 
+AdvanceCOMP Version 1.15 2005/04
+</h2>
+<ul>
+<li>
+Fixed the date displayed with the -l advzip command.
+</li>
+</ul>
+<h2> 
 AdvanceCOMP Version 1.14 2005/02
 </h2>
 <ul>
